2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Core/Banshee.ThickClient/Banshee.Gui/BaseClientWindow.cs: Port fix across from
      stable so that using Alt+F4 to close the main window works again.

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
      Remove a few bits of commented code. Added Stock.Properties icon for the Configure
      menu item.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/ViewActions.cs: Added Ctrl+E keyboard
      shortcut for equalizer window.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: Added Stock.Preferences
      icon for Preferences menu item.
    
    * src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: Added E keyboard shortcut
      for track editor dialog.

2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs: Use the static
      instance of Account shared by others, rather than creating a seperate instance.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Added support for keeping
      track of network connection state and automatically connecting. Also included better
      debugging messages.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
      Fix queuing tracks that have actually been played long enough but were not submitted.
      Also added a few simple checks to see if the current track attempting to be queued
      is null or has been listened to for less than one second.
    
    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/Queue.cs: Send tracks
      with the correct original play-start time (instead of double-universal time).
    