@@ -1,4 +1,15 @@
 2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
+    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
+      Rewrote the SongTimer class to use PlayerEngine.Position. Doesn't rely on
+      PlayerEngineState events anymore. This also means that SongTimer works well while
+      listening to songs on Last.fm.
+    
+    * src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/Queue.cs:
+    * src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Implement MusicBrainzId
+      property and using that data to generate requests to Last.fm. Currently isn't
+      attached to any real data source, so the ID is always empty.
+
+2008-02-23  Alexander Hixon  <hixon.alexander@mediati.org>
     * src/Core/Banshee.ThickClient/Banshee.Gui/BaseClientWindow.cs: Port fix across from
       stable so that using Alt+F4 to close the main window works again.
 
